# gnn-credit-fraud-networks

./: CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
configs/: credit.yaml  fraud.yaml
docs/: api.md  design.md  roadmap.md
examples/: data_schema.sql
gnn_credit_fraud/: __init__.py
gnn_credit_fraud/data/: datasets.py  simulate.py
gnn_credit_fraud/models/: gat.py  sage.py
gnn_credit_fraud/tasks/: train_credit.py  train_fraud.py
gnn_credit_fraud/utils/: metrics.py  seed.py
notebooks/: eda.ipynb
tests/: test_basic.py
